<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".form.FarmerForm">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/formTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="16dp"
                android:text="@string/diary_form"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:layout_toEndOf="@+id/formProfile"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/formProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/colorPrimaryDark"
                android:padding="16dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

    </com.github.florent37.shapeofview.shapes.ArcView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/farmerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:hint="@string/farmer_name"
            android:inputType="text"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/farmerQuesstion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:hint="@string/farmer_question"
            android:inputType="text"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/farmerSuggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:hint="@string/suggestions"
            android:inputType="text"
            android:importantForAutofill="no" />


        <EditText
            android:id="@+id/farmerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/phone"
            android:maxLength="11"
            android:inputType="number"
            android:textAlignment="center"
            tools:ignore="TextFields"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/farmerCoordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="onFarmerFormSubmit"
            android:text="@string/save_si"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimaryDark" />


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/focal_point_nmustafa_nangraj_n03003036689"
        android:layout_margin="16dp" />
</RelativeLayout>