<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signin.SignIn">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/signInArc"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:shape_arc_cropDirection="outside"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:padding="16dp"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </com.github.florent37.shapeofview.shapes.ArcView>

    <LinearLayout
        android:id="@+id/signInForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="220dp"
            app:cardElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_phone"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signInPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:drawableTop="@drawable/ic_baseline_phone_android_24"
                    android:drawablePadding="16dp"
                    android:inputType="phone"
                    android:layoutDirection="rtl"
                    android:maxLength="11"
                    android:textAlignment="center"
                    android:textDirection="rtl"

                    />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:onClick="onSignInClick"
                    android:text="@string/confirm"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorPrimaryDark" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        android:layout_below="@+id/signInForm"
        android:textAlignment="center"/>



    <TextView
        android:id="@+id/footerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/focal_point_nmustafa_nangraj_n03003036689"
        android:textAlignment="center" />

</RelativeLayout>